[gd_scene load_steps=8 format=3 uid="uid://bqxt4qvvqx5lj"]

[ext_resource type="Script" path="res://scripts/menus/menu_settings.gd" id="1_1ptlj"]
[ext_resource type="Texture2D" uid="uid://c3rkgo18l3esc" path="res://assets/particle/Checkbox_Full.png" id="1_qe0ko"]
[ext_resource type="Texture2D" uid="uid://b6o6d4lvr77ql" path="res://assets/particle/Checkbox_Empty.png" id="2_62cxx"]

[sub_resource type="Animation" id="Animation_y6vyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Control_Tab_Vbox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_il3cl"]
resource_name = "ToControl"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Control_Tab_Vbox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_drqo4"]
resource_name = "ToGeneral"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Control_Tab_Vbox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_worfj"]
_data = {
"RESET": SubResource("Animation_y6vyu"),
"ToControl": SubResource("Animation_il3cl"),
"ToGeneral": SubResource("Animation_drqo4")
}

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ptlj")

[node name="Settings_MC" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_right = 60

[node name="Settings_VBox" type="VBoxContainer" parent="Settings_MC"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Tab_Vbox" type="VBoxContainer" parent="Settings_MC/Settings_VBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Tab_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Opt_Gen_Butt" type="Button" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " General "

[node name="Opt_Cont_Butt" type="Button" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Controls "

[node name="Tab_Panel" type="Panel" parent="Settings_MC/Settings_VBox/Tab_Vbox"]
custom_minimum_size = Vector2(1800, 750)
layout_mode = 2

[node name="Gen_Tab_Hbox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel"]
layout_mode = 2
offset_right = 1800.0
offset_bottom = 750.0
theme_override_constants/separation = 25
alignment = 1

[node name="Top_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Display_Hbox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Display_VBox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Display_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "DISPLAY"
horizontal_alignment = 1

[node name="Full_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Full_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox/Full_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Fullscreen Mode"

[node name="Full_Check" type="CheckBox" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox/Full_HBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_icons/checked = ExtResource("1_qe0ko")
theme_override_icons/unchecked = ExtResource("2_62cxx")

[node name="Rez_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Rez_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox/Rez_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Resolution"

[node name="Rez_Drop" type="OptionButton" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Top_HBox/Display_Hbox/Display_VBox/Rez_HBox"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 50
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "1080p"
popup/item_0/id = 0
popup/item_1/text = "720p"
popup/item_1/id = 1
popup/item_2/text = "480p"
popup/item_2/id = 2

[node name="Bot_Hbox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="UI_VBox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="UI_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "INTERFACE"
horizontal_alignment = 1

[node name="Checkbox1_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Checkbox1_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox/Checkbox1_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Show Hints"

[node name="Checkbox1_Check" type="CheckBox" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox/Checkbox1_HBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_icons/checked = ExtResource("1_qe0ko")
theme_override_icons/unchecked = ExtResource("2_62cxx")

[node name="Checkbox2_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Checkbox2_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox/Checkbox2_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Checkbox 2"

[node name="Checkbox2_Check" type="CheckBox" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox/Checkbox2_HBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_icons/checked = ExtResource("1_qe0ko")
theme_override_icons/unchecked = ExtResource("2_62cxx")

[node name="Checkbox3_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Checkbox3_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox/Checkbox3_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Checkbox 3"

[node name="Checkbox3_Check" type="CheckBox" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/UI_VBox/Checkbox3_HBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_icons/checked = ExtResource("1_qe0ko")
theme_override_icons/unchecked = ExtResource("2_62cxx")

[node name="Audio_VBox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Audio_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "AUDIO"
horizontal_alignment = 1

[node name="Overall_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Overall_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/Overall_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Overall"

[node name="Overall_Slider" type="HSlider" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/Overall_HBox"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="Overall_Percent" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/Overall_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "100%"

[node name="SFX_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="SFX_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/SFX_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Effects"

[node name="SFX_Slider" type="HSlider" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/SFX_HBox"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="SFX_Percent" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/SFX_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "100%"

[node name="Music_HBox" type="HBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Music_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/Music_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Music"

[node name="Music_Slider" type="HSlider" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/Music_HBox"]
custom_minimum_size = Vector2(500, 75)
layout_mode = 2
size_flags_vertical = 4
value = 100.0

[node name="Music_Percent" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Gen_Tab_Hbox/Bot_Hbox/Audio_VBox/Music_HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "100%"

[node name="Control_Tab_Vbox" type="VBoxContainer" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel"]
visible = false
custom_minimum_size = Vector2(1800, 750)
layout_mode = 0
offset_right = 1800.0
offset_bottom = 750.0
theme_override_constants/separation = -15
alignment = 1

[node name="Placeholder_Label" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Control_Tab_Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "IF ONLY WE HAD A"
horizontal_alignment = 1

[node name="Placeholder_Label2" type="Label" parent="Settings_MC/Settings_VBox/Tab_Vbox/Tab_Panel/Control_Tab_Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "KEYBINDING SECTION HERE"
horizontal_alignment = 1

[node name="Back_Button" type="Button" parent="Settings_MC/Settings_VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = " Back "

[node name="Settings_Tabs_Player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_worfj")
}

[connection signal="pressed" from="Settings_MC/Settings_VBox/Tab_Vbox/Tab_HBox/Opt_Gen_Butt" to="." method="_on_opt_gen_butt_pressed"]
[connection signal="pressed" from="Settings_MC/Settings_VBox/Tab_Vbox/Tab_HBox/Opt_Cont_Butt" to="." method="_on_opt_cont_butt_pressed"]
[connection signal="pressed" from="Settings_MC/Settings_VBox/Back_Button" to="." method="_on_back_button_pressed"]
